# AkiFlow-Connector

./: .env.example  .gitignore  README.md  pyproject.toml  sample_day_request.json  sample_request.json
frontend/src/: App.css  App.tsx  api.ts
operator_mcp_server.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
productivity_operator/: commands.py  config.py  inbox.py  main.py  manual.py  models.py  task_registry.py
productivity_operator/analysis/: __init__.py  task_analyzer.py
productivity_operator/connectors/: base.py  mock.py
productivity_operator/planner/: __init__.py  engine.py
productivity_operator/planning/: __init__.py  apply_plan.py  context.py  context_builder.py  daily_planner.py  day_planner.py  schedule_optimizer.py  simulation.py
productivity_operator/scoring/: __init__.py  task_scorer.py
productivity_operator/services/: __init__.py  akiflow_service.py
productivity_operator/web/: index.html
tests/: test_akiflow_auth.py  test_apply_plan.py  test_daily_planner.py
